# DPHDC

./: CMakeLists.txt  Readme.md
examples/: CMakeLists.txt  ResultsHandler.cpp  ResultsHandler.hpp  readExeInputs.cpp  readExeInputs.hpp
examples/cifar10/: CMakeLists.txt  cifar10.cpp  cifar10_reader.hpp
examples/emg/: CMakeLists.txt  emg.cpp  readDataset.cpp  readDataset.hpp
examples/hdna/: CMakeLists.txt  Readme.md  hdna.cpp  readDataset.cpp  readDataset.hpp
examples/language/: CMakeLists.txt  Readme.md  defs.hpp  language.cpp  readDataset.cpp  readDataset.hpp
examples/mnist/: CMakeLists.txt  Readme.md  mnist.cpp  readDataset.cpp  readDataset.hpp
examples/python/: run.sh
examples/python/voicehd/: .gitignore  main.py  readDataset.py
examples/voicehd/: CMakeLists.txt  readDataset.cpp  readDataset.hpp  voicehd.cpp
src/: CMakeLists.txt  HDMatrix.hpp  HDRepresentation.hpp  buffer_helper.cpp  constructors.cpp  encoders.cpp  permutations.cpp  pybind.cpp  query.cpp  reductions.cpp  selectors.hpp  sets_gets.cpp  storing_reading.cpp  supported_data.hpp  vector_generators.cpp
src/libraryheaders/: dphdc.hpp
tests/: CMakeLists.txt  tests.cpp
